--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script class="remove">
       // All config options at https://respec.org/docs/
       var respecConfig = {
+        latestVersion: null,
         specStatus: "base",
         editors: [{ name: "Morgan Murrah", url: "https://morganwebdev.com" }],
         github: "airbr/personalspec",
