--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         editors: [{ name: "Morgan Murrah", url: "https://morganwebdev.com" }],
         github: "airbr/personalspec",
         license: "w3c-software-doc",
-        // shortName: "dahut",
-        // xref: "web-platform",
         group: "privacy",
       };
     </script>
@@ -34,20 +32,10 @@
     <section class="informative">
       <h2>Introduction</h2>
       <p>Some informative introductory text about Morgan.</p>
-      <aside class="note" title="A useful note">
+      <!-- <aside class="note" title="A useful note">
         <p>I'm a note!</p>
-      </aside>
+      </aside> -->
     </section>
-    <!-- <section>
-      <h2>A section</h2>
-      <aside class="example">
-        <p>This is an example.</p>
-        <pre class="js">
-        // Automatic syntax highlighting
-        function someJavaScript(){}
-        </pre>
-      </aside>
-    </section> -->
     <section>
       <h2>Requirements</h2>
       <p>Morgan MUST do his best.</p>
