--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
     </section>
     <section class="informative">
       <h2>Introduction</h2>
-      <p>Some informative introductory text about Morgan.</p>
       <!-- <aside class="note" title="A useful note">
         <p>I'm a note!</p>
       </aside> -->
     </section>
     <section>
       <h2>Requirements</h2>
-      <p>Morgan MUST do his best.</p>
+      <p>IF Morgan has rested Morgan MUST do his best.</p>
     </section>
     <section id="conformance">
       <p>
