--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Morgan's Personal Specification test with ReSpec" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://airbr.github.io/personalspec/" />
     <title>Morgan's Personal Standard</title>
     <script
       src="https://www.w3.org/Tools/respec/respec-w3c"
